FIXED text comments in the jupyter file

--- a/vis/cross_sections_plots.ipynb
+++ b/vis/cross_sections_plots.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Total cross section of the coherent scattering neutrino on the nucleus"
+    "### Total cross section of the neutrino coherent scattering on the nucleus"
    ]
   },
   {
