RENAMED cross_section module ADDED function for calculating differential cross section of the coherent neutrino scattering

--- a/vis/cross_sections_plots.ipynb
+++ b/vis/cross_sections_plots.ipynb
@@ -87,7 +87,7 @@
     "plt.plot(energy_nu, cs_ar_total, label='Ar')\n",
     "plt.plot(energy_nu, cs_ge_total, label='Ge')\n",
     "\n",
-    "plt.legend()\n"
+    "plt.legend()"
    ]
   },
   {
