ADDED function for calculating total reactor antinu flux REFACTORING

--- a/vis/cross_sections_plots.ipynb
+++ b/vis/cross_sections_plots.ipynb
@@ -26,8 +26,8 @@
     "from numpy import linspace\n",
     "%matplotlib inline\n",
     "\n",
-    "import src.coherent_neutrino_nucleus as cn\n",
-    "import src.phys_constants as p_const\n",
+    "import lib.coherent_neutrino_nucleus as cn\n",
+    "import lib.phys_constants as p_const\n",
     "\n",
     "Xe_N = 77\n",
     "Xe_Z = 54\n",
@@ -224,9 +224,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +236,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
