ADDED supernova calculations

--- a/vis/reactor_spectrum.ipynb
+++ b/vis/reactor_spectrum.ipynb
@@ -35,8 +35,9 @@
     "Ar_M = 38.964313 * p_const.ATOMIC_MASS_UNIT # MeV\n",
     "\n",
     "DISTANCE = 50 # m ()\n",
-    "Ar_MOLAR_MASS = 38.964313 * 1000 # kg/mol\n",
+    "Ar_MOLAR_MASS = 38.964313 / 1000 # kg/mol\n",
     "DETECTOR_MASS = 10 # kg\n",
+    "NUMBER_TARGETS = p_const.AVOGADRO * DETECTOR_MASS / Ar_MOLAR_MASS\n",
     "################################# Reactor ##########################################################\n",
     "\n",
     "POWER_REACTOR = 1000 * p_const.JOULE_IN_eV # MeV/s\n",
@@ -292,7 +293,8 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -329,7 +331,7 @@
     "    \n",
     "    for i in range(first_index, nu_energy_range.size):\n",
     "        diff_cs = cn.differential_cross_section_for_nucleus_kinetic(Ar_Z, Ar_N, Ar_M, nu_energy_range[i], nucleus_kinetic)\n",
-    "        diff_cs *= p_const.CONVERSION_hc**2 ## MeV^-2 ---> cm^2\n",
+    "        diff_cs *= p_const.CONVERSION_hc**2 ## MeV^-2 ---> m^2\n",
     "        probability_density += en_increment * reactor_antinu_flux_at_distance[i] * diff_cs\n",
     "        \n",
     "    nucleus_kinetic_spectrum.append(probability_density)\n",
@@ -367,8 +369,6 @@
     }
    ],
    "source": [
-    "target_number = p_const.AVOGADRO * DETECTOR_MASS / Ar_MOLAR_MASS\n",
-    "\n",
     "total_events = 0.\n",
     "treashold = .5 / 1000 # MeV\n",
     "delta_kin = nucleus_kinetic_range[1] - nucleus_kinetic_range[0]\n",
@@ -377,7 +377,7 @@
     "        continue\n",
     "    total_events += nucleus_kinetic_spectrum[i] * delta_kin\n",
     "    \n",
-    "total_events * target_number * 30758400 * 2"
+    "total_events * NUMBER_TARGETS * 30758400 * 2"
    ]
   },
   {
